Auto stash before merge of "master" and "origin/master"
Fixed some responsive issues

--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
         <ul class="slides">
             <li>
                 <img src="img/poster4@0,25x.png">
-                <div class="caption center-align" >
+                <div class="caption center-align hide-on-small-only" >
                     <h1 style="text-shadow: 1px 1px 8px #000000;">Welcome to DESIGNET</h1>
                     <h4 style="text-shadow: 1px 1px 8px #000000;">The all new Career Network for Designers of all Kinds</h4>
                 </div>
             </li>
             <li>
                 <img src="img/poster1@0,25x.png">
-                <div class="caption center-align" >
-                    <svg xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
+                <div class="caption center-align " >
+                    <svg class="hide-on-small-only" xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
                     <h3 style="text-shadow: 1px 1px 8px #000000;">Welcome to DESIGNET</h3>
                     <h5 style="text-shadow: 1px 1px 8px #000000;">The all new Career Network for Designers of all Kinds</h5>
                 </div>
             </li>
             <li>
                 <img src="img/poster2@0,25x.png">
-                <div class="caption center-align" >
-                    <svg xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
+                <div class="caption center-align " >
+                    <svg class="hide-on-small-only" xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
                     <h3 style="text-shadow: 1px 1px 8px #000000;">Welcome to DESIGNET</h3>
                     <h5 style="text-shadow: 1px 1px 8px #000000;">The all new Career Network for Designers of all Kinds</h5>
                 </div>
             </li>
             <li>
                 <img src="img/poster3@0,25x.png">
-                <div class="caption center-align">
-                    <svg xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
+                <div class="caption center-align ">
+                    <svg class="hide-on-small-only" xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
                     <h3 style="text-shadow: 1px 1px 8px #000000;">Welcome to DESIGNET</h3>
                     <h5 style="text-shadow: 1px 1px 8px #000000;">The all new Career Network for Designers of all Kinds</h5>
                 </div>
@@ -53,7 +53,7 @@
             <li>
                 <img src="img/poster5@0,25x.png">
                 <div class="caption center-align">
-                    <svg xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
+                    <svg class="hide-on-small-only" xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke: white;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
                     <h3 style="text-shadow: 1px 1px 8px #000000;">Welcome to DESIGNET</h3>
                     <h5 style="text-shadow: 1px 1px 8px #000000;">The all new Career Network for Designers of all Kinds</h5>
                 </div>
@@ -61,7 +61,7 @@
         </ul>
     </div>
 
-    <form class="card hoverable col s12 center-align" style=" background-color: rgba(255, 255, 255, 0.85); width: 400px; position: fixed; bottom: 15%;  padding-top: 15px; margin-bottom: 0; left: -200px; margin-left: 50%; z-index: 998;">
+    <form class="card hoverable col s12 center-align" style=" background-color: rgba(255, 255, 255, 0.85); width: 350px; position: fixed; bottom: 15%;  padding-top: 15px; margin-bottom: 0; left: -175px; margin-left: 50%; z-index: 998;">
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">account_circle</i>
