--- a/startpage.html
+++ b/startpage.html
@@ -92,21 +92,21 @@
         <div class="row">
             <div class="col s12">
                 <div class="row">
-                    <div class="col s4">
+                    <div class="col m4 s12">
                         <div class="center promo promo-example">
                             <i class="material-icons" style="font-size: 7rem;">whatshot</i>
                             <h5 class="promo-caption">Boost your Creative Career</h5>
                             <p class="light center">Create interactive work portfolios showcasing your most successful projects as a Virtual Reality walk-through and profit from many other digital services that allow both businesses and creative professionals to work more collaboratively and efficiently.</p>
                         </div>
                     </div>
-                    <div class="col s4">
+                    <div class="col m4 s12">
                         <div class="center promo promo-example">
                             <i class="material-icons" style="font-size: 7rem;">group</i>
                             <h5 class="promo-caption">Expand your Network</h5>
                             <p class="light center">Connect and communicate to designers and businesses around the world to find help on your latest project, inspiration for your current work and offers for upcoming jobs. Here you can work collaboratively to create and design the future.</p>
                         </div>
                     </div>
-                    <div class="col s4">
+                    <div class="col m4 s12">
                         <div class="center promo promo-example">
                             <i class="material-icons" style="font-size: 7rem;">public</i>
                             <h5 class="promo-caption">Work Independent</h5>
@@ -117,7 +117,7 @@
             </div>
         </div>
         <div class="row" id="network">
-            <div class="col s6">
+            <div class="col m6 s12">
                 <div class="card blue-grey darken-1 hoverable">
                     <div class="card-content white-text">
                         <div class="row valign-wrapper">
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s6">
+            <div class="col m6 s12">
                 <div class="card blue-grey darken-1 hoverable">
                     <div class="card-content white-text">
                         <div class="row valign-wrapper">
