--- a/startpage.html
+++ b/startpage.html
@@ -43,7 +43,7 @@
     <li><a class="waves-effect" href="#!"><i class="material-icons">payment</i>Payment </a></li>
     <li><a class="waves-effect" href="index.html"><i class="material-icons">close</i>Logout </a></li>
 </ul>
-<a style=" position: fixed; left: 23px; top: 50%; padding-bottom: 15px; margin-top: 0; z-index: 997;" class="btn-floating btn-large waves-effect waves-light deep-orange button-collapse" data-activates="slide-out" >
+<a class="hide-on-small-only" style=" position: fixed; left: 23px; top: 50%; padding-bottom: 15px; margin-top: 0; z-index: 997;" class="btn-floating btn-large waves-effect waves-light deep-orange button-collapse" data-activates="slide-out" >
     <i class="material-icons">menu</i>
 </a>
 
