Removed profile character

--- a/startpage.html
+++ b/startpage.html
@@ -67,7 +67,7 @@
     <main>
 
         <div class="row center-align" id="top" style="position: relative;">
-            <img style="position: absolute; top:50%; left: 50%; width: 80px; margin-top: -42.5px; margin-left: -40px;" class="circle hoverable" src="img/erik-lucatero-310633.jpg">
+            <!--<img style="position: absolute; top:50%; left: 50%; width: 80px; margin-top: -42.5px; margin-left: -40px;" class="circle hoverable" src="img/erik-lucatero-310633.jpg">-->
             <svg xmlns="http://www.w3.org/2000/svg" style="width: 200px;" viewBox="0 0 82.4 94.68"><defs><style>.cls-1{fill:none;stroke:#ea5521;stroke-miterlimit:10;stroke-width:0.5px;}</style></defs><title>Element 5</title><g id="Ebene_2" data-name="Ebene 2"><g id="Ebene_1-2" data-name="Ebene 1"><polygon class="cls-1" points="41.2 0.14 0.47 23.66 81.94 23.66 41.2 0.14"/><polygon class="cls-1" points="0.47 70.7 41.2 94.22 0.47 23.66 0.47 70.7"/><polygon class="cls-1" points="81.94 23.66 0.47 23.66 41.2 47.18 81.94 23.66"/><polygon class="cls-1" points="41.2 47.18 41.2 94.22 81.94 23.66 41.2 47.18"/><polygon class="cls-1" points="41.2 94.22 81.94 70.7 81.94 23.66 41.2 94.22"/><polygon class="cls-1" points="0.47 23.66 41.2 94.22 41.2 47.18 0.47 23.66"/></g></g></svg>
 
         </div>
