generic text replaced

--- a/startpage.html
+++ b/startpage.html
@@ -264,19 +264,19 @@
             <li class="collection-item avatar">
                 <img src="img/erik-lucatero-385007.jpg" alt="" class="circle">
                 <span class="title">Tinna Ahlberg</span>
-                <p>First Line of Message visibe here</p>
+                <p>I'm not satisfied but it's the best I can do right now. We can figure it out tomorrow...</p>
                 <a href="#!" class="secondary-content"><i class="material-icons">reply</i></a>
             </li>
             <li class="collection-item avatar">
                 <img src="img/aatik-tasneem-138230.jpg" alt="" class="circle">
                 <span class="title">Brian Kallberg</span>
-                <p>First Line of Message visibe here</p>
+                <p>Not yet. I just finished writing the document. Is there anything else I should attach except from flyer and rollup?</p>
                 <a href="#!" class="secondary-content"><i class="material-icons">reply</i></a>
             </li>
             <li class="collection-item avatar">
                 <img src="img/brian-fraser-337137.jpg" alt="" class="circle">
                 <span class="title">Rika Osterholm</span>
-                <p>First Line of Message visibe here</p>
+                <p>I finished the first prototype today. The content is quite generic though. I will add better content next week, maybe with the help of the texts we have.</p>
                 <a href="#!" class="secondary-content"><i class="material-icons">reply</i></a>
             </li>
         </ul>
