--- a/startpage.html
+++ b/startpage.html
@@ -304,6 +304,7 @@
     <div class="footer-copyright">
         <div class="container">
             © 2017 Designet
+            <a class="grey-text text-lighten-4 right" href="https://drive.google.com/file/d/15Ramhoo3PBC5fM6uugoTlK-VSZaKMmKd/view?usp=sharing">Graphical Profile</a>
         </div>
     </div>
 </footer>
